# jlac10-mapping

./: .gitignore  ExceltoBarcodePDF.txt  README.md  data_get.txt  first exceltojson.txt  index.html  pyproject.toml  test100.json
.streamlit/: secrets.toml.example
app/: index.html
data/: 136jlac10_1.xlsx  bact_materials.json  bml_tests_latest.json  gene_panels.json  janis_antibiotics.json  janis_species.json  jlac10_lookup.json  jlac10_master.json  jslm_last_update.txt  lsi_tests_latest.json  merged_jlac10.json  sop_SOP_TP.json  sop_parsed.json  srl_tests_latest.json
data/reagents/: reagent_db.json
docs/: CLI_REFERENCE.md  DESIGN_BACT_MAPPING.md  DESIGN_CUSTOM_RULES.md  DESIGN_DELIVERY_FORMAT.md  DESIGN_ERROR_KNOWLEDGE.md  DESIGN_SN_DASHBOARD.md  MAPPING_RULES.md  SETUP_POWER_AUTOMATE.md  SYSTEM_OVERVIEW.md  WORKFLOW_INTEGRATION.md  WORKFLOW_SSMIX_ERROR.md  payload_schema.json
scripts/: ExcelToJlac10Json.ts  GenericExcelToJson.ts  GenericJsonToExcel.ts  JsonToDeliveryExcel.ts  JsonToMappingExcel.ts  MappingHistoryToJson.ts  WatchAndConvert.ts  append_stockpile.py  convert_bact_references.py  setup_windows.ps1  test_rocketchat.py
scripts/power_automate/: README.md
src/srl_scraper/: audit_log.py  bml.py  categories.py  cli.py  converter.py  delivery_format.py  jslm.py  lsi.py  mapper.py  merge.py  method_matcher.py  ncda_checker.py  reagent.py  scraper.py  search.py  sop_parser.py  sop_rules.py  ssmix_parser.py  vendor_profiles.py
streamlit_app/: config.py  main.py
streamlit_app/pages/: 1_Fire.py  2_Stockpile.py  3_Settings.py
(+3 files in other folders)
