[project]
name = "srl-scraper"
version = "1.0.0"
description = "SRL総合検査案内からの検査項目データ取得・更新ツール"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "pymupdf>=1.27.2.2",
    "streamlit>=1.40",
    "jsonschema>=4.23",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/srl_scraper"]

[project.scripts]
srl-scraper = "srl_scraper.cli:main"
